# SiQ-3D

./: LICENSE  README.md  SiQ-3D.yml  setup.cfg
SiQ3D/: classifiers.py  immuneTracker.py  preprocess.py  segmentation.py  track.py  tumorTracker.py  unet3d.py
examples/: NKCs_classifier_training.ipynb  NKCs_tracking.ipynb  tumor_classifier_training.ipynb
examples/.ipynb_checkpoints/: NKCs_tracking-checkpoint.ipynb  train_3D-UNet-checkpoint.ipynb  tumor_tracking-checkpoint.ipynb
