[metadata]
name = SiQ3D
version = 0.1.0
author = Simon lbd
author_email = simonlbd123@gmail.com
description = Deep Learning-based 3D single-cell imaging analysis pipeline for quantifying cell-cell interaction dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simonlbd1/SiQ-3D

classifiers =
    Programming Language :: Python
    Environment :: GPU :: NVIDIA CUDA

[options]
packages = find:
install_requires =
    btrack==0.4.3
    h5py==3.1.0
    matplotlib==3.5.3
    notebook==6.5.2
    numpy==1.19.5
    opencv-python==4.6.0.66
    pandas==1.4.3
    pillow==9.2.0
    protobuf==3.20.3
    scikit-image==0.19.3
    scikit-learn==1.1.3

python_requires = >=3.8
